--- a/sims_assignment15/projects.html
+++ b/sims_assignment15/projects.html
@@ -25,7 +25,7 @@
         
 
         <div class=column>
-            <img src="images/tictactoepic.png" width="400" height="400">
+            <a href="tic.html"><img src="images/tictactoepic.png" width="400" height="400">
             <img src="images/car.jpg" width="400" height="400">
             <img src="images/deadflower.jpg" width="400" height="400">
             <img src="images/flower.jpg" width="400" height="400">
